# cheerios

./: .gitignore  .travis-ci.sh  .travis.yml  BasicSerializers.v  Binary.v  Cheerios.v  Combinators.v  ComplexSerializers.v  Core.v  DeserializerMonad.v  Extra.v  ExtractCheerios.v  Extraction.v  HoareLogic.v  LICENSE  ListBoolSerializers.v  Makefile  Monads.v  Monoid.v  Morphism.v  MorphismExample.v  README.md  SerializerRewrite.v  StringUtils.v  Tactics.v  Tree.v  Types.v  _CoqProject  build.sh  cheerios-runtime.install  cheerios-runtime.opam  cheerios.opam  configure  coq-cheerios.opam  dune-project  meta.yml  opam  status.org
.github/workflows/: docker-action.yml
Examples/: MorphismExample.v
cheerios-runtime/: .gitignore  Makefile  bit_vector.ml  positive_test.ml  remove_module.pl  tree_test.ml
cheerios-runtime/coq/: ExtractPositiveSerializer.v
core/: BasicSerializers.v  ByteDecidable.v  Cheerios.v  Combinators.v  Core.v  DeserializerMonad.v  IOStream.v  MsgPack.v  Protobuf.v  StateMachines.v  Tactics.v  Tree.v  Types.v
doc/: NOTES.md
examples/: Chord.v  LockServ.v  Raft.v  VarD.v
extraction/: ExtrByteListReader.v  ExtrByteListWriter.v  ExtrCheerios.v  ExtrIOStream.v  ExtrOcamlCheeriosBasic.v  ExtrOcamlCheeriosFinInt.v  ExtrOcamlCheeriosFloat.v  ExtrOcamlCheeriosNatInt.v  ExtrOcamlCheeriosString.v
lib/: Binary.v  Combinators.v  Makefile  Makefile.coq  Types.v  configure
oCamlTest/: Makefile  basicSerializers.ml  binary.ml  combinators.ml  complexSerializers.ml  types.ml
ocaml-cheerios/: Makefile  bit_vector.ml  bit_vector.mli  bit_vector_tests.ml  bool_pair.ml  bool_pair_test.ml  positive.ml  positive_extracted.mli  positive_test.ml  positive_test_exec.ml  serializer_primitives.ml  serializer_primitives.mli  test_utils.ml
runtime/: .gitignore  Makefile  tree_out_slow_list
runtime/coq/: ExtractPositiveSerializer.v  (+3 more)
theories/: dune
(+23 files in other folders)
