opam-version: "1.2"
version: "dev"
maintainer: "palmskog@gmail.com"

homepage: "https://github.com/uwplse/cheerios"
dev-repo: "https://github.com/uwplse/cheerios.git"
bug-reports: "https://github.com/uwplse/cheerios/issues"
license: "BSD"

build: [
  [ make "-j%{jobs}%" "-C" "runtime" ]
]
build-test: [ make "-C" "runtime" "test" ]
available: [ ocaml-version >= "4.02.3" ]
depends: [
  "ocamlbuild" {build}
  "ounit" {test & >= "2.0.0"}
]

authors: [
  "Keith Simmons <>"
  "Doug Woos <>"
  "James Wilcox <>"
  "Justin Adsuara <>"
  "Karl Palmskog <>"
]
