opam-version: "2.0"
version: "dev"
maintainer: "palmskog@gmail.com"

homepage: "https://github.com/uwplse/cheerios"
dev-repo: "git+https://github.com/uwplse/cheerios.git"
bug-reports: "https://github.com/uwplse/cheerios/issues"
license: "BSD-2-Clause"
synopsis: "Cheerios serialization framework runtime library"

build: [ make "-j%{jobs}%" "-C" "runtime" ]
depends: [
  "ocaml" {>= "4.02.3"}
  "ocamlbuild" {build}
]

authors: [
  "Keith Simmons"
  "Doug Woos"
  "James R. Wilcox"
  "Justin Adsuara"
  "Karl Palmskog"
]
